[tool.black]
line-length = 79

[tool.poetry]
name = "bed-socket"
description = ""
version = "0.0.0"
authors = ["Trevor Lauder <trevor@lauderfamily.ca>"]

[tool.poetry.dependencies]
python = "^3.9.5"
redis = "^3.5"
reyaml = "^0.2"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9"
isort = "^5.9"
