[tool.black]
line-length = 79

[tool.poetry]
name = "bed-socket"
description = ""
version = "0.0.0"
authors = ["Trevor Lauder <trevor@lauderfamily.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5"
reyaml = "^0.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0"
isort = "^5.10"
pytest = "^6.2"
pytest-mock = "^3.6"
