[tool.black]
line-length = 79

[tool.poetry]
name = "controller-api"
description = ""
version = "0.0.0"
authors = ["Trevor Lauder <trevor@lauderfamily.ca>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66"
redis = "^3.5"
reyaml = "^0.2"
uvicorn = "^0.14"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
flake8 = "^3.9"
isort = "^5.9"
pytest = "^6.2"
requests = "^2.25"
